--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta property="og:site_name" content="Nerissa Lamug" />
+    <meta property="og:title" content="Main" />
+    <meta property="og:url" content="http://www.nerissalamug.com/" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:description"
+      content="Nerissa Lamug. A software engineer with over 8 years experience writing stand-alone &amp; web applications in C#, ASP.Net, and Silverlight using Object Oriented Analysis &amp; Design."
+    />
+    <meta itemprop="name" content="Main" />
+    <meta itemprop="url" content="http://www.nerissalamug.com/" />
+    <meta
+      itemprop="description"
+      content="Nerissa Lamug. A software engineer with over 8 years experience writing stand-alone &amp; web applications in C#, ASP.Net, and Silverlight using Object Oriented Analysis &amp; Design."
+    />
+    <meta name="twitter:title" content="Main" />
+    <meta name="twitter:url" content="http://www.nerissalamug.com/" />
+    <meta name="twitter:card" content="summary" />
+    <meta
+      name="twitter:description"
+      content="Nerissa Lamug. A software engineer with over 8 years experience writing stand-alone &amp; web applications in C#, ASP.Net, and Silverlight using Object Oriented Analysis &amp; Design."
+    />
+    <meta
+      name="description"
+      content="Nerissa Lamug. A software engineer with over 8 years experience writing 
+stand-alone &amp; web applications in C#, ASP.Net, and Silverlight using Object 
+Oriented Analysis &amp; Design."
+    />
+    <title>Nerissa Lamug - Software Engineer</title>
+    <link rel="stylesheet" href="https://use.typekit.net/vlt3mkb.css" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="index-min.css" />
+  </head>
+  <body>
+    <main>
+      <div class="main-container">
+        <img
+          class="profile-pic"
+          src="./profile-img.png"
+          alt="Image of Nerissa Lamug"
+        />
+        <h1 class="name">Nerissa Lamug</h1>
+        <h2 class="title">Software Engineer</h2>
+        <p class="description">
+          I'm Nerissa Lamug. A software engineer with over 10 years experience
+          writing stand-alone & web applications in C#, ASP.Net Web Forms, and
+          ASP.Net MVVM using Object Oriented Analysis & Design.<br />My
+          interests are many, but professionally I'm interested in software
+          engineering, machine learning, numerical analysis, and Parallel
+          Computing.
+        </p>
+        <ul class="links">
+          <li><a href="resume.html">resume</a></li>
+          <li>
+            <a href="https://www.linkedin.com/in/nerissalamug/" target="_blank"
+              >linkedin</a
+            >
+          </li>
+          <li>
+            <a href="https://github.com/nerissalamug" target="_blank">github</a>
+          </li>
+        </ul>
+      </div>
+    </main>
+  </body>
+</html>
