--- a/index.html
+++ b/index.html
@@ -10,26 +10,25 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:description"
-      content="Nerissa Lamug. A software engineer with over 8 years experience writing stand-alone &amp; web applications in C#, ASP.Net, and Silverlight using Object Oriented Analysis &amp; Design."
+      content="Nerissa Lamug. A software engineer with over 10 years experience writing stand-alone &amp; web applications using Object Oriented Analysis &amp; Design."
     />
     <meta itemprop="name" content="Main" />
     <meta itemprop="url" content="http://www.nerissalamug.com/" />
     <meta
       itemprop="description"
-      content="Nerissa Lamug. A software engineer with over 8 years experience writing stand-alone &amp; web applications in C#, ASP.Net, and Silverlight using Object Oriented Analysis &amp; Design."
+      content="Nerissa Lamug. A software engineer with over 10 years experience writing stand-alone &amp; web applications using Object Oriented Analysis &amp; Design."
     />
     <meta name="twitter:title" content="Main" />
     <meta name="twitter:url" content="http://www.nerissalamug.com/" />
     <meta name="twitter:card" content="summary" />
     <meta
       name="twitter:description"
-      content="Nerissa Lamug. A software engineer with over 8 years experience writing stand-alone &amp; web applications in C#, ASP.Net, and Silverlight using Object Oriented Analysis &amp; Design."
+      content="Nerissa Lamug. A software engineer with over 10 years experience writing stand-alone &amp; web applications using Object Oriented Analysis &amp; Design."
     />
     <meta
       name="description"
-      content="Nerissa Lamug. A software engineer with over 8 years experience writing 
-stand-alone &amp; web applications in C#, ASP.Net, and Silverlight using Object 
-Oriented Analysis &amp; Design."
+      content="Nerissa Lamug. A software engineer with over 10 years experience writing
+stand-alone &amp; web applications using Object Oriented Analysis &amp; Design."
     />
     <title>Nerissa Lamug - Software Engineer</title>
     <link rel="stylesheet" href="https://use.typekit.net/vlt3mkb.css" />
@@ -49,11 +48,10 @@ Oriented Analysis &amp; Design."
         <h2 class="title">Software Engineer</h2>
         <p class="description">
           I'm Nerissa Lamug. A software engineer with over 10 years experience
-          writing stand-alone & web applications in C#, ASP.Net Web Forms, and
-          ASP.Net MVVM using Object Oriented Analysis & Design.<br />My
-          interests are many, but professionally I'm interested in software
-          engineering, machine learning, numerical analysis, and Parallel
-          Computing.
+          writing stand-alone & web applications using Object Oriented Analysis & Design.<br />
+          My interests are many, but professionally I'm interested in software
+          engineering, machine learning, numerical analysis, and parallel
+          computing.
         </p>
         <ul class="links">
           <li><a href="resume.html">resume</a></li>
