--- a/resume.html
+++ b/resume.html
@@ -16,9 +16,8 @@
     <meta name="twitter:card" content="summary" />
     <meta
       name="description"
-      content="Nerissa Lamug. A software engineer with over 8 years experience writing 
-stand-alone &amp; web applications in C#, ASP.Net, and Silverlight using Object 
-Oriented Analysis &amp; Design."
+      content="Nerissa Lamug. A software engineer with over 10 years experience writing
+stand-alone &amp; web applications using Object Oriented Analysis &amp; Design."
     />
     <title>Resume - Nerissa Lamug</title>
     <link rel="stylesheet" href="https://use.typekit.net/vlt3mkb.css" />
@@ -81,7 +80,7 @@ Oriented Analysis &amp; Design."
                 experience designers.
               </li>
               <li>Working remotely from Washington D.C. Metro Area.</li>
-              <li>Technology: Python, Javascript, Backbone, and MySQL</li>
+              <li>Technology: Python, Java, PHP, Javascript, React, Backbone, and MySQL</li>
             </ul>
           </li>
         </ul>
@@ -91,7 +90,7 @@ Oriented Analysis &amp; Design."
         <ul>
           <li>
             <strong>Master of Science Computer Science</strong><br />Baylor
-            University 2005<br />GPA: 3.58 (Overall) with full tuition
+            University<br />GPA: 3.58 (Overall) with full tuition
             assistantship<br />Master’s Project: Implementing and Testing a
             Distributed Control System<br />Concentration: Software Engineering
           </li>
@@ -99,12 +98,8 @@ Oriented Analysis &amp; Design."
             <strong
               >Bachelor of Science Computer Science with Minor in
               Mathematics</strong
-            ><br />Baylor University 2002<br />GPA: 3.51 (Overall), 3.70 (Major)
+            ><br />Baylor University<br />GPA: 3.51 (Overall), 3.70 (Major)
             with partial tuition scholarship
-          </li>
-          <li>
-            <strong>Associate in Arts Computer Science</strong><br />McLennan
-            Community College 2000<br />Graduated with Honors
           </li>
         </ul>
       </section>
@@ -128,75 +123,6 @@ Oriented Analysis &amp; Design."
             while applying software engineering principles for the world's
             largest fitness franchise.
           </li>
-          <!--
-            <li>
-              <strong>Part-time Database Application Developer</strong><br /><em
-                >Special Education</em
-              >, Midway ISD, Waco, TX, 2003 – 2005<br />Reviewed, analyzed, and
-              modified programming systems including encoding, testing, debugging
-              and installing to support the organization’s application systems
-              written in Visual C++ for MSSQL
-            </li>
-            <li>
-              <strong>Graduate Assistant – Web Application Developer</strong
-              ><br /><em>Academic &amp; Research Computing Services</em>, Baylor
-              University, Waco, TX, 2004 – 2005<br />Designed, produced, and
-              maintained websites for the Athletic Traning Sports Medicine
-              Department and Truett Seminary in PHP
-            </li>
-            <li>
-              <strong>Teacher Assistant</strong><br /><em
-                >Computer Science Department</em
-              >, Baylor University, Waco, TX, 2003<br />Provided instructional and
-              clerical support for a professor/lecturer. Tutored and assisted
-              students in learning class material using the teacher’s lesson plans
-            </li>
-            <li>
-              <strong>Web Application Developer Intern</strong><br /><em
-                >Language Acquisition Center</em
-              >, Baylor University, Waco, TX, 2002<br />Created and maintained
-              website designed to help students gain knowledge of their respective
-              foreign language courses and to give statistics to professors for
-              research and evaluation in PHP and MySQL
-            </li>
-            <li>
-              <strong>Part-time Academic Tutor</strong><br /><em
-                >McLennan Community College</em
-              >, Waco, TX, 1999 – 2000<br />Guided individuals and groups in
-              preparing for exams especially in Mathematics. Trained new tutors
-            </li>
-          -->
-        </ul>
-      </section>
-
-      <section>
-        <h1>Skills</h1>
-        <ul>
-          <li>
-            <strong>Web Development:&nbsp;</strong><br />C#, HTML, IMAP,
-            JavaScript, AJAX, ASP, ASP.NET Web Forms, ASP.NET MVC, .NET 2.0,
-            .NET 3.0, .NET 3.5, .NET 4.0, Silverlight, SharePoint, IIS
-          </li>
-          <li>
-            <strong>Web Services:</strong><br />WCF, XML, XSL, XSLT, XSD, WSDL,
-            SOAP
-          </li>
-          <li><strong>Database:&nbsp;</strong><br />MSSQL, T-SQL, LINQ</li>
-          <li>
-            <strong>Tools:&nbsp;</strong><br />Visual Studio 2010, Team
-            Foundation Server (TFS), SQL Management Studio
-          </li>
-          <li>
-            <strong>Methodology:&nbsp;</strong><br />Software engineering
-            principles, Agile, Model-View-Controller (MVC) Design Pattern, OOA,
-            OOD
-          </li>
-          <li>
-            <strong>Graduate Classes:</strong><br />Linear Programming,
-            Probability and Statistics, Numerical Linear Algebra, Numerical
-            Analysis, Numerical Methods, Introduction to Computation Theory,
-            Introduction to Machine Learning
-          </li>
         </ul>
       </section>
 
@@ -206,15 +132,9 @@ Oriented Analysis &amp; Design."
           <li>IEEE Computer Society</li>
           <li>Computer Research Association Grad-Cohort for Women (CRA-W)</li>
           <li>
-            Upsilon Pi Epsilon (Computer Science Honor Society) invitation only
+            Upsilon Pi Epsilon (International Honor Society for the Computing and
+            Information Disciplines) invitation only
           </li>
-          <li>Golden Key National Honor Society</li>
-          <!--
-            <li>
-              Gamma Beta Phi Society (Honor Society) scholastic ranking within the
-              top 20% GPA 3.5
-            </li>
-          -->
         </ul>
       </section>
     </div>
