Update Job Title and Description

--- a/index.html
+++ b/index.html
@@ -10,27 +10,26 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:description"
-      content="Nerissa Lamug. A software engineer with over 10 years experience writing stand-alone &amp; web applications using Object Oriented Analysis &amp; Design."
+      content="Nerissa Lamug. A software engineering manager and a software engineer with over 15 years experience writing stand-alone and web applications."
     />
     <meta itemprop="name" content="Main" />
     <meta itemprop="url" content="http://www.nerissalamug.com/" />
     <meta
       itemprop="description"
-      content="Nerissa Lamug. A software engineer with over 10 years experience writing stand-alone &amp; web applications using Object Oriented Analysis &amp; Design."
+      content="Nerissa Lamug. A software engineering manager and a software engineer with over 15 years experience writing stand-alone and web applications."
     />
     <meta name="twitter:title" content="Main" />
     <meta name="twitter:url" content="http://www.nerissalamug.com/" />
     <meta name="twitter:card" content="summary" />
     <meta
       name="twitter:description"
-      content="Nerissa Lamug. A software engineer with over 10 years experience writing stand-alone &amp; web applications using Object Oriented Analysis &amp; Design."
+      content="Nerissa Lamug. A software engineering manager and a software engineer with over 15 years experience writing stand-alone and web applications."
     />
     <meta
       name="description"
-      content="Nerissa Lamug. A software engineer with over 10 years experience writing
-stand-alone &amp; web applications using Object Oriented Analysis &amp; Design."
+      content="Nerissa Lamug. Nerissa Lamug. A software engineering manager and a software engineer with over 15 years experience writing stand-alone and web applications."
     />
-    <title>Nerissa Lamug - Software Engineer</title>
+    <title>Nerissa Lamug - Software Engineering Manager</title>
     <link rel="stylesheet" href="https://use.typekit.net/vlt3mkb.css" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
@@ -45,10 +44,10 @@ stand-alone &amp; web applications using Object Oriented Analysis &amp; Design."
           alt="Image of Nerissa Lamug"
         />
         <h1 class="name">Nerissa Lamug</h1>
-        <h2 class="title">Software Engineer</h2>
+        <h2 class="title">Software Engineering Manager</h2>
         <p class="description">
-          I'm Nerissa Lamug. A software engineer with over 10 years experience
-          writing stand-alone & web applications using Object Oriented Analysis & Design.<br />
+          I'm Nerissa Lamug. A software engineering manager and a software engineer with over 15 years experience
+          writing stand-alone and web applications.<br />
           My interests are many, but professionally I'm interested in software
           engineering, machine learning, numerical analysis, and parallel
           computing.
