--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     />
     <meta
       name="description"
-      content="Nerissa Lamug. Nerissa Lamug. A software engineering manager and a software engineer with over 15 years experience writing stand-alone and web applications."
+      content="Nerissa Lamug. A software engineering manager and a software engineer with over 15 years experience writing stand-alone and web applications."
     />
     <title>Nerissa Lamug - Software Engineering Manager</title>
     <link rel="stylesheet" href="https://use.typekit.net/vlt3mkb.css" />
