--- a/resume.html
+++ b/resume.html
@@ -16,8 +16,7 @@
     <meta name="twitter:card" content="summary" />
     <meta
       name="description"
-      content="Nerissa Lamug. A software engineer with over 10 years experience writing
-stand-alone &amp; web applications using Object Oriented Analysis &amp; Design."
+      content="Nerissa Lamug. A software engineering manager and a software engineer with over 15 years experience writing stand-alone and web applications."
     />
     <title>Resume - Nerissa Lamug</title>
     <link rel="stylesheet" href="https://use.typekit.net/vlt3mkb.css" />
@@ -28,17 +27,17 @@ stand-alone &amp; web applications using Object Oriented Analysis &amp; Design."
     <div class="resume">
       <header>
         <h1 class="name"><a href="/">Nerissa Lamug</a></h1>
-        <h2 class="title">Software Engineer</h2>
+        <h2 class="title">Software Engineering Manager</h2>
       </header>
       <section class="summary">
         <h1>Professional Summary</h1>
         <ul>
           <li>
-            Over ten years software development writing stand-alone &amp; web
-            application utilizing
-            <strong>Object-Oriented Analysis </strong>&amp;&nbsp;<strong
-              >Design (OOA/OOD/OOP)</strong
-            >
+            Managing three teams of six software engineers
+          </li>
+          <li>
+            Over fifteen years software development writing stand-alone &amp; web
+            application
           </li>
           <li>
             Experience defining the structure of data and manipulating data in
@@ -55,32 +54,27 @@ stand-alone &amp; web applications using Object Oriented Analysis &amp; Design."
         <h1>Current Experience</h1>
         <ul>
           <li>
-            <strong>Senior Software Engineer</strong><br /><em>Minted</em>, San
-            Francisco, CA (2016 – Present)<br />A design marketplace which
+            <strong>Software Engineering Manager</strong><br /><em>Minted</em>, San
+            Francisco, CA (2020 – Present)<br />A design marketplace which
             sources creative content from a global community of independent
             artists, then sell the best content in the form of art, home décor,
             and stationery, directly to consumers.
             <ul style="margin-left:2.5em">
               <li>
-                Design and implement code for the minted.com website and related
-                systems.
+                Takes a lead role in building complex software systems including 
+                architectural proposals, code reviews and hands on coding
               </li>
               <li>
-                Create features that deliver industry-&shy;&shy;leading user
-                growth, retention, and conversion, in addition to features that
-                benefit Minted's community platform of graphic designers and
-                artists.
+                Organizes work streams to meet deadlines
               </li>
               <li>
-                Write robust code with high performance and low error rate.
+                Works closely with product management to implement and constantly groom 
+                a complex backlog of projects
               </li>
               <li>
-                Work with fellow engineers, product management, graphic
-                designers, quality assurance testers, business users, and user
-                experience designers.
+                Creates an engineering culture of ownership, accountability, testing and measurement
               </li>
-              <li>Working remotely from Washington D.C. Metro Area.</li>
-              <li>Technology: Python, Java, PHP, Javascript, React, Backbone, and MySQL</li>
+              <li>A talent builder to attract, mentor, and retain best in class engineers</li>
             </ul>
           </li>
         </ul>
@@ -106,6 +100,31 @@ stand-alone &amp; web applications using Object Oriented Analysis &amp; Design."
       <section class="experience">
         <h1>Past Experience</h1>
         <ul>
+            <li>
+              <strong>Staff Software Engineer</strong><br /><em>Minted</em>, San
+              Francisco, CA (2016 – 2020)
+              <ul style="margin-left:2.5em">
+                <li>
+                  Design and implement code for the minted.com website and related
+                  systems.
+                </li>
+                <li>
+                  Create features that deliver industry-&shy;&shy;leading user
+                  growth, retention, and conversion, in addition to features that
+                  benefit Minted's community platform of graphic designers and
+                  artists.
+                </li>
+                <li>
+                  Write robust code with high performance and low error rate.
+                </li>
+                <li>
+                  Work with fellow engineers, product management, graphic
+                  designers, quality assurance testers, business users, and user
+                  experience designers.
+                </li>
+                <li>Technology: Python, Java, PHP, Javascript, React, Backbone, and MySQL</li>
+              </ul>
+            </li>
           <li>
             <strong>Senior Software Developer</strong><br />Jenny Craig,
             Carlsbad, CA, 2014 – 2016<br />Employs object-oriented design and
