Update Staff Software Engineer Section

--- a/resume.html
+++ b/resume.html
@@ -102,28 +102,16 @@
         <ul>
             <li>
               <strong>Staff Software Engineer</strong><br /><em>Minted</em>, San
-              Francisco, CA (2016 – 2020)
-              <ul style="margin-left:2.5em">
-                <li>
-                  Design and implement code for the minted.com website and related
-                  systems.
-                </li>
-                <li>
-                  Create features that deliver industry-&shy;&shy;leading user
-                  growth, retention, and conversion, in addition to features that
-                  benefit Minted's community platform of graphic designers and
-                  artists.
-                </li>
-                <li>
-                  Write robust code with high performance and low error rate.
-                </li>
-                <li>
-                  Work with fellow engineers, product management, graphic
-                  designers, quality assurance testers, business users, and user
-                  experience designers.
-                </li>
-                <li>Technology: Python, Java, PHP, Javascript, React, Backbone, and MySQL</li>
-              </ul>
+              Francisco, CA (2016 – 2020)<br />
+              Design and implement code for the minted.com website and related
+              systems. Create features that deliver industry-&shy;&shy;leading user
+              growth, retention, and conversion, in addition to features that
+              benefit Minted's community platform of graphic designers and
+              artists. Write robust code with high performance and low error rate.
+              Work with fellow engineers, product management, graphic designers, 
+              quality assurance testers, business users, and user
+              experience designers.
+              <br />Technology: Python, Java, PHP, Javascript, React, Backbone, and MySQL
             </li>
           <li>
             <strong>Senior Software Developer</strong><br />Jenny Craig,
