--- a/resume.html
+++ b/resume.html
@@ -76,6 +76,38 @@
               </li>
               <li>A talent builder to attract, mentor, and retain best in class engineers</li>
             </ul>
+            The Software Teams:
+            Community Team
+            <ul style="margin-left:2.5em">
+            <li>
+              Owns pages that support the minted community of designers and artists https://www.minted.com/participate/overview
+            </li>
+            <li>
+              Current projects include updating the look and feel of the voting page
+            </li>
+            </ul>
+            Product Launch Team
+            <ul style="margin-left:2.5em">
+              <li>
+                Owns pages that allow the minted community to launch their own product into minted.com
+              </li>
+              <li>
+                Owns the internal tools that allow the merchandise operations team to launch the minted community's winning designs
+              </li>
+              <li>
+                Current projects include Art Image Automation integration
+              </li>
+            </ul>
+            E-commerce Growth Team
+            <ul style="margin-left:2.5em">
+              <li>
+                Owns product customization, cart, checkout, and growth
+              </li>
+              <li>
+                Current projects include modernizing and upgrading our product customizer across all verticals, primarily focusing on
+                Holiday and Wedding
+              </li>
+            </ul>
           </li>
         </ul>
       </section>
