--- a/resume.html
+++ b/resume.html
@@ -76,7 +76,7 @@
               </li>
               <li>A talent builder to attract, mentor, and retain best in class engineers</li>
             </ul>
-            The Software Teams:
+            The Software Teams:<br />
             Community Team
             <ul style="margin-left:2.5em">
             <li>
