--- a/resume.html
+++ b/resume.html
@@ -27,13 +27,13 @@
     <div class="resume">
       <header>
         <h1 class="name"><a href="/">Nerissa Lamug</a></h1>
-        <h2 class="title">Software Engineering Manager</h2>
+        <h2 class="title">Senior Manager, Software Engineering</h2>
       </header>
       <section class="summary">
         <h1>Professional Summary</h1>
         <ul>
           <li>
-            Managing three teams of six software engineers
+            Managing two teams of eight software engineers
           </li>
           <li>
             Over fifteen years software development writing stand-alone &amp; web
@@ -54,7 +54,7 @@
         <h1>Current Experience</h1>
         <ul>
           <li>
-            <strong>Software Engineering Manager</strong><br /><em>Minted</em>, San
+            <strong>Senior Manager, Software Engineering</strong><br /><em>Minted</em>, San
             Francisco, CA (2020 – Present)<br />A design marketplace which
             sources creative content from a global community of independent
             artists, then sell the best content in the form of art, home décor,
@@ -76,9 +76,12 @@
               </li>
               <li>A talent builder to attract, mentor, and retain best in class engineers</li>
             </ul>
-            The Software Teams:<br />
+            Current Software Teams:<br />
             Community Team
             <ul style="margin-left:2.5em">
+            <li>
+              3 full-time engineers and 1 contractor
+            </li>
             <li>
               Owns pages that support the minted community of designers and artists https://www.minted.com/participate/overview
             </li>
@@ -89,6 +92,9 @@
             Product Launch Team
             <ul style="margin-left:2.5em">
               <li>
+                4 full-time engineers
+              </li>
+              <li>
                 Owns pages that allow the minted community to launch their own product into minted.com
               </li>
               <li>
@@ -98,13 +104,36 @@
                 Current projects include Art Image Automation integration
               </li>
             </ul>
-            E-commerce Growth Team
+            Interim Software Team:<br />
+            Finance team
             <ul style="margin-left:2.5em">
+              <li>
+                1 full-time engineer and 1 contractor
+              </li>
+              <li>
+                Current projects include ERP integration with Netsuite
+              </li>
+            </ul>
+            Previous Software Teams:<br />
+            Direct From Artist team
+            <ul style="margin-left:2.5em">
+              <li>
+                3 full-time engineers and entire contractor team (PM, BA, 3 engineers, and QA)
+              </li>
+              <li>
+                Projects include Marketplace Alpha, which updates current minted.com to support sellers in selling their products, and Marketplace Beta, which integrates with Mirakl, a marketplace platform, to allow minted.com to scale the number of sellers
+              </li>
+            </ul>
+            E-commerce Purcase / Growth Team
+            <ul style="margin-left:2.5em">
+              <li>
+                2 full-time engineers and a contractor team (PM and 3 engineers)
+              </li>
               <li>
                 Owns product customization, cart, checkout, and growth
               </li>
               <li>
-                Current projects include modernizing and upgrading our product customizer across all verticals, primarily focusing on
+                Projects include modernizing and upgrading our product customizer across all verticals, primarily focusing on
                 Holiday and Wedding
               </li>
             </ul>
