--- a/resume.html
+++ b/resume.html
@@ -77,33 +77,38 @@
               <li>A talent builder to attract, mentor, and retain best in class engineers</li>
             </ul>
             Current Software Teams:<br />
-            Community Team
-            <ul style="margin-left:2.5em">
-            <li>
-              3 full-time engineers and 1 contractor
-            </li>
-            <li>
-              Owns pages that support the minted community of designers and artists https://www.minted.com/participate/overview
-            </li>
-            <li>
-              Current projects include updating the look and feel of the voting page
-            </li>
-            </ul>
-            Product Launch Team
-            <ul style="margin-left:2.5em">
+            <ul style="margin-left:1.5em">
               <li>
-                4 full-time engineers
+                Community Team
+                <ul style="margin-left:2.5em">
+                  <li>
+                    3 full-time engineers and 1 contractor
+                  </li>
+                  <li>
+                    Owns pages that support the minted community of designers and artists https://www.minted.com/participate/overview
+                  </li>
+                  <li>
+                    Current projects include updating the look and feel of the voting page
+                  </li>
+                </ul>
               </li>
               <li>
-                Owns pages that allow the minted community to launch their own product into minted.com
+                Product Launch Team
+                <ul style="margin-left:2.5em">
+                  <li>
+                    4 full-time engineers
+                  </li>
+                  <li>
+                    Owns pages that allow the minted community to launch their own product into minted.com
+                  </li>
+                  <li>
+                    Owns the internal tools that allow the merchandise operations team to launch the minted community's winning designs
+                  </li>
+                  <li>
+                    Current projects include Art Image Automation integration
+                  </li>
+                </ul>
               </li>
-              <li>
-                Owns the internal tools that allow the merchandise operations team to launch the minted community's winning designs
-              </li>
-              <li>
-                Current projects include Art Image Automation integration
-              </li>
-            </ul>
             Interim Software Team:<br />
             Finance team
             <ul style="margin-left:2.5em">
@@ -124,7 +129,7 @@
                 Projects include Marketplace Alpha, which updates current minted.com to support sellers in selling their products, and Marketplace Beta, which integrates with Mirakl, a marketplace platform, to allow minted.com to scale the number of sellers
               </li>
             </ul>
-            E-commerce Purcase / Growth Team
+            E-commerce Purchase / Growth Team
             <ul style="margin-left:2.5em">
               <li>
                 2 full-time engineers and a contractor team (PM and 3 engineers)
