--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       name="description"
       content="Nerissa Lamug. A software engineering manager and a software engineer with over 15 years experience writing stand-alone and web applications."
     />
-    <title>Nerissa Lamug - Software Engineering Manager</title>
+    <title>Nerissa Lamug - Senior Manager, Software Engineering</title>
     <link rel="stylesheet" href="https://use.typekit.net/vlt3mkb.css" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
@@ -44,7 +44,7 @@
           alt="Image of Nerissa Lamug"
         />
         <h1 class="name">Nerissa Lamug</h1>
-        <h2 class="title">Software Engineering Manager</h2>
+        <h2 class="title">Senior Manager, Software Engineering</h2>
         <p class="description">
           I'm Nerissa Lamug. A software engineering manager and a software engineer with over 15 years experience
           writing stand-alone and web applications.<br />
